[tool.poetry]
name = "tiltenv"
version = "0.1.0"
description = "A CLI tool for managing Tilt environments"
authors = ["Nathan Heaps <nsheaps@gmail.com>"]
readme = "README.md"
packages = [{include = "src/tiltenv"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
# tiltenv = "tiltenv.main:cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
