[tool.poetry]
name = "tiltenv"
version = "0.1.0"
description = "A CLI tool for managing Tilt environments"
authors = ["Nathan Heaps <nsheaps@gmail.com>"]
readme = "README.md"
packages = [{include = "src/tiltenv"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
# tiltenv = "tiltenv.main:cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^25.0.0"
mypy = "^1.11.0"
pylint = "^3.2.6"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"


